# fins-driver

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
fins/: __init__.py  adapters.py  client.py  command.py  exceptions.py  header.py  memory.py  memory_area.py  response.py  response_codes.py
samples/: memory_area_read.py  memory_area_write.py  read_analog.py  read_counter.py
samples/analog/: read_analog.py
tests/: test_memory.py
